--- a/_2_HelloAndroid/MyFirstApp/app/src/main/res/values-night/themes.xml
+++ b/_2_HelloAndroid/MyFirstApp/app/src/main/res/values-night/themes.xml
@@ -2,6 +2,22 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.MyFirstApp" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your dark theme here. -->
+
+        <!--  -->
+        <!-- activity_main.xml icin yazdigim kodlar: -->
+
         <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
+
+        <!-- tepedeki action bar -->
+        <!-- <item name="windowActionBar">true</item>-->
+        <!-- <item name="windowNoTitle">false</item>-->
+
+        <!--  -->
+        <!-- login_page.xml icin yazdigim kodlar: -->
+
+        <item name="colorPrimary">@color/Primary</item>
+        <item name="windowNoTitle">true</item>
+        <item name="windowActionBar">false</item>
+
     </style>
 </resources>
