--- a/_2_HelloAndroid/MyFirstApp/app/src/main/res/values/themes.xml
+++ b/_2_HelloAndroid/MyFirstApp/app/src/main/res/values/themes.xml
@@ -2,13 +2,26 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.MyFirstApp" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
+
+        <!--  -->
+        <!-- activity_main.xml icin yazdigim kodlar: -->
+
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
 
-        <!-- tepedeki action bar'i false ile kaldirabilirim: -->
-        <!-- <item name="windowActionBar">false</item>-->
+        <!-- tepedeki action bar -->
+        <!-- <item name="windowActionBar">true</item>-->
+        <!-- <item name="windowNoTitle">false</item>-->
 
         <!-- colorPrimary rengini kendi yarattigim renk yaptim: -->
-        <item name="colorPrimary">#BD0D12</item>
+        <!-- <item name="colorPrimary">#70086A</item> -->
+
+        <!--  -->
+        <!-- login_page.xml icin yazdigim kodlar: -->
+
+        <item name="colorPrimary">@color/Primary</item>
+        <item name="windowNoTitle">true</item>
+        <item name="windowActionBar">false</item>
+
 
 
     </style>
