--- a/_2_HelloAndroid/MyFirstApp/app/src/main/res/layout/constraint_tasarim.xml
+++ b/_2_HelloAndroid/MyFirstApp/app/src/main/res/layout/constraint_tasarim.xml
@@ -11,6 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="320dp"
         android:text="Button"
+        android:textColor="@color/white"
         app:layout_constraintStart_toStartOf="@+id/guideline"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -20,6 +21,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="116dp"
         android:text="Button"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/button13"
@@ -31,6 +33,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="116dp"
         android:text="Button"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toStartOf="@+id/button10"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -41,6 +44,7 @@
         android:layout_width="0dp"
         android:layout_height="48dp"
         android:text="Button"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -54,6 +58,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="192dp"
         android:text="Button"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/guideline3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.696"
