--- a/_2_HelloAndroid/MyFirstApp/app/src/main/res/layout/linear_tasarim.xml
+++ b/_2_HelloAndroid/MyFirstApp/app/src/main/res/layout/linear_tasarim.xml
@@ -10,19 +10,22 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="30"
-        android:text="Button" />
+        android:text="Button"
+        android:textColor="@color/white" />
 
     <Button
         android:id="@+id/button7"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="40"
-        android:text="Button" />
+        android:text="Button"
+        android:textColor="@color/white" />
 
     <Button
         android:id="@+id/button8"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="30"
-        android:text="Button" />
+        android:text="Button"
+        android:textColor="@color/white" />
 </LinearLayout>
