--- a/_2_HelloAndroid/MyFirstApp/app/src/main/res/layout/relative_tasarim.xml
+++ b/_2_HelloAndroid/MyFirstApp/app/src/main/res/layout/relative_tasarim.xml
@@ -11,7 +11,8 @@
         android:layout_alignParentTop="true"
         android:layout_marginStart="9dp"
         android:layout_marginTop="149dp"
-        android:text="Button1" />
+        android:text="Button1"
+        android:textColor="@color/white" />
 
     <Button
         android:id="@+id/button2"
@@ -19,7 +20,8 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/button1"
         android:layout_toRightOf="@id/button1"
-        android:text="Button2" />
+        android:text="Button2"
+        android:textColor="@color/white" />
 
     <Button
         android:id="@+id/button3"
@@ -27,7 +29,8 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/button2"
         android:layout_toRightOf="@id/button2"
-        android:text="Button3" />
+        android:text="Button3"
+        android:textColor="@color/white" />
 
     <Button
         android:id="@+id/button4"
@@ -35,7 +38,8 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/button3"
         android:layout_toLeftOf="@id/button3"
-        android:text="Button4" />
+        android:text="Button4"
+        android:textColor="@color/white" />
 
     <Button
         android:id="@+id/button5"
@@ -43,14 +47,16 @@
         android:layout_height="wrap_content"
         android:layout_above="@id/button3"
         android:layout_toRightOf="@id/button3"
-        android:text="Button5" />
+        android:text="Button5"
+        android:textColor="@color/white" />
 
     <Button
         android:id="@+id/button6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
-        android:text="Button6" />
+        android:text="Button6"
+        android:textColor="@color/white" />
 
     <Button
         android:id="@+id/button7"
@@ -58,14 +64,16 @@
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:text="Button7" />
+        android:text="Button7"
+        android:textColor="@color/white" />
 
     <Button
         android:id="@+id/button8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:text="Button8" />
+        android:text="Button8"
+        android:textColor="@color/white" />
 
 
 
