--- a/_2_HelloAndroid/MyFirstApp/app/src/main/res/layout/activity_main.xml
+++ b/_2_HelloAndroid/MyFirstApp/app/src/main/res/layout/activity_main.xml
@@ -58,24 +58,26 @@
         android:id="@+id/button_b_1_goToLoginActivity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="125dp"
         android:layout_marginBottom="84dp"
         android:text="Login ekranina git"
         android:textColor="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/button_a_2_tikla2"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/textView_b_1_welcome"
         android:layout_width="132dp"
         android:layout_height="91dp"
-        android:layout_marginEnd="140dp"
         android:layout_marginBottom="30dp"
         android:text="SkiCenter uygulmasina hosgeldiniz!"
         android:textAlignment="center"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/button_b_1_goToLoginActivity"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/textView_b_2_A"
