--- a/_2_HelloAndroid/MyFirstApp/app/src/main/res/layout/activity_menu.xml
+++ b/_2_HelloAndroid/MyFirstApp/app/src/main/res/layout/activity_menu.xml
@@ -70,6 +70,7 @@
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="33dp"
         android:text="Profile"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
