--- a/_2_HelloAndroid/Passions/app/src/main/res/layout/fragment_main_menu.xml
+++ b/_2_HelloAndroid/Passions/app/src/main/res/layout/fragment_main_menu.xml
@@ -2,20 +2,20 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/fragmentCategories"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".FragmentCategories">
+    tools:context=".FragmentMainMenu">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="106dp"
-        android:text="Kategoriler"
-        android:textSize="25sp"
+        android:text="Anasayfa"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.5" />
 </androidx.constraintlayout.widget.ConstraintLayout>
