--- a/_2_HelloAndroid/Passions/app/src/main/res/values/colors.xml
+++ b/_2_HelloAndroid/Passions/app/src/main/res/values/colors.xml
@@ -2,4 +2,9 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="project_main_color">#009688</color>
+
+
+
+
 </resources>
