--- a/_2_HelloAndroid/Passions/app/src/main/res/menu/nav_drawer_menu.xml
+++ b/_2_HelloAndroid/Passions/app/src/main/res/menu/nav_drawer_menu.xml
@@ -2,21 +2,15 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/fragmentMainMenu"
+        android:id="@+id/fragmentMaMe"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:icon="@drawable/icon_mainmenu"
         android:title="Anasayfa" />
     <item
-        android:id="@+id/fragmentCategories"
+        android:id="@+id/fragmentCate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:icon="@drawable/icon_categories"
         android:title="Kategoriler" />
-    <item
-        android:id="@+id/fragmentProfile"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:icon="@drawable/icon_profile"
-        android:title="Profil" />
 </menu>
