--- a/_2_HelloAndroid/Passions/app/src/main/res/values/themes.xml
+++ b/_2_HelloAndroid/Passions/app/src/main/res/values/themes.xml
@@ -3,6 +3,9 @@
     <style name="Base.Theme.Passions" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+
+
+        <item name="colorPrimary">@color/project_main_color</item>
     </style>
 
     <style name="Theme.Passions" parent="Base.Theme.Passions" />
