--- a/_2_HelloAndroid/Passions/app/src/main/res/layout/fragment_main_menu.xml
+++ b/_2_HelloAndroid/Passions/app/src/main/res/layout/fragment_main_menu.xml
@@ -12,8 +12,20 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
         android:layout_marginEnd="50dp"
-        android:text="Anasayfa"
+        android:text="Anasayfa2"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/buttonGoToActivityMain2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="191dp"
+        android:layout_marginTop="312dp"
+        android:layout_marginEnd="50dp"
+        android:text="Diger Activity'e Gec"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
 </androidx.constraintlayout.widget.ConstraintLayout>
