--- a/_2_HelloAndroid/Passions/app/src/main/res/layout/fragment_categories.xml
+++ b/_2_HelloAndroid/Passions/app/src/main/res/layout/fragment_categories.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
         android:layout_marginEnd="50dp"
-        android:text="Kategoriler"
+        android:text="Kategoriler2"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
