--- a/_2_HelloAndroid/Passions/app/src/main/res/layout/fragment_ma_me.xml
+++ b/_2_HelloAndroid/Passions/app/src/main/res/layout/fragment_ma_me.xml
@@ -16,4 +16,16 @@
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/buttonGoToActivityMain"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="191dp"
+        android:layout_marginTop="312dp"
+        android:layout_marginEnd="50dp"
+        android:text="Diger Activity'e Gec"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView3" />
 </androidx.constraintlayout.widget.ConstraintLayout>
