--- a/_2_HelloAndroid/TahminEt/app/src/main/res/layout/activity_guess.xml
+++ b/_2_HelloAndroid/TahminEt/app/src/main/res/layout/activity_guess.xml
@@ -8,10 +8,11 @@
 
     <TextView
         android:id="@+id/textViewCounter"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="328dp"
+        android:layout_height="86dp"
         android:layout_marginTop="64dp"
-        android:text="3 hakkin var. Basla!"
+        android:text="Tuttum! 3 hakkın var. Başla!"
+        android:textAlignment="center"
         android:textSize="34sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
