--- a/_2_HelloAndroid/TahminEt/app/src/main/res/layout/activity_main.xml
+++ b/_2_HelloAndroid/TahminEt/app/src/main/res/layout/activity_main.xml
@@ -49,7 +49,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="64dp"
-        android:text="Basla"
+        android:text="Başla"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -77,7 +77,7 @@
         android:layout_width="325dp"
         android:layout_height="51dp"
         android:layout_marginTop="18dp"
-        android:text="Aklimdan 1 ile 20 arasinda bi' sayi tutuyorum..."
+        android:text="Aklımdan 1 ile 20 arasında bi' sayı tutuyorum..."
         android:textAlignment="center"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -89,7 +89,7 @@
         android:layout_width="371dp"
         android:layout_height="75dp"
         android:layout_marginBottom="16dp"
-        android:text="Uyari: Eger tuttugum sayiyi 3 kez bilirsen odullendirileceksin. Aksine 3 kez bilemezsen cok fena cezalandirilacaksin!"
+        android:text="Uyarı: Eğer tuttuğum sayıyı 3 kez bilirsen ödüllendirileceksin. Aksine 3 kez bilemezsen çok feci cezalandırılacaksın!"
         android:textAlignment="center"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/buttonStart"
