--- a/_2_HelloAndroid/Cannonball/app/src/main/res/values/colors.xml
+++ b/_2_HelloAndroid/Cannonball/app/src/main/res/values/colors.xml
@@ -2,4 +2,5 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="gray">#4D4F59</color>
 </resources>
