--- a/_2_HelloAndroid/Cannonball/app/src/main/res/layout/activity_four.xml
+++ b/_2_HelloAndroid/Cannonball/app/src/main/res/layout/activity_four.xml
@@ -4,32 +4,43 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ActivityMain">
+    tools:context=".ActivityFour">
 
     <Button
-        android:id="@+id/buttonToast1"
+        android:id="@+id/buttonSnackBarKlasik"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="64dp"
-        android:text="Toast1"
+        android:text="Klasik SnackBar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/buttonToast2"
+        android:id="@+id/buttonSnackBarOzel1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="64dp"
-        android:text="Toast2"
+        android:text="Ozel SnackBar 1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonToast1" />
+        app:layout_constraintTop_toBottomOf="@+id/buttonSnackBarKlasik" />
 
     <Button
-        android:id="@+id/buttonGoToActivityTwo"
+        android:id="@+id/buttonSnackBarOzel2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="64dp"
+        android:text="Ozel SnackBar 2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonSnackBarOzel1" />
+
+    <Button
+        android:id="@+id/buttonGoToActivityFive"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="64dp"
