--- a/_2_HelloAndroid/Cannonball/app/src/main/res/layout/activity_two.xml
+++ b/_2_HelloAndroid/Cannonball/app/src/main/res/layout/activity_two.xml
@@ -6,17 +6,25 @@
     android:layout_height="match_parent"
     tools:context=".ActivityTwo">
 
-    <TextView
-        android:id="@+id/textView"
+    <Button
+        android:id="@+id/buttonOptions"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="215dp"
-        android:layout_marginTop="238dp"
-        android:layout_marginEnd="138dp"
-        android:layout_marginBottom="401dp"
-        android:text="TextView"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="64dp"
+        android:text="Secenekleri gor"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/buttonGoToActivityThree"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="64dp"
+        android:text="Diger Activity'e Gec"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
