--- a/_2_HelloAndroid/Cannonball/app/src/main/res/values/themes.xml
+++ b/_2_HelloAndroid/Cannonball/app/src/main/res/values/themes.xml
@@ -3,6 +3,7 @@
     <style name="Base.Theme.Cannonball" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="android:statusBarColor">@color/statusBarColor</item>
     </style>
 
     <style name="Theme.Cannonball" parent="Base.Theme.Cannonball" />
