--- a/_2_HelloAndroid/MaterialDesign3/app/src/main/res/layout/activity_main.xml
+++ b/_2_HelloAndroid/MaterialDesign3/app/src/main/res/layout/activity_main.xml
@@ -57,7 +57,7 @@
         android:id="@+id/buttonSave"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="40dp"
         android:text="Kaydet"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -94,5 +94,15 @@
         app:navigationIcon="@drawable/icon_toolbar"
         app:subtitle="Bilgilerinizi girin"
         app:title="Kisisel Bilgiler" />
+
+    <Button
+        android:id="@+id/buttonGoToActivityTwo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="64dp"
+        android:text="Diger Activity'e Gec"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
