--- a/_2_HelloAndroid/Pomegranate/app/src/main/res/layout/activity_main.xml
+++ b/_2_HelloAndroid/Pomegranate/app/src/main/res/layout/activity_main.xml
@@ -31,11 +31,11 @@
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/buttonP"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="18dp"
-        android:onClick="pomegranate"
+        android:onClick="funForButtonP"
         android:text="Button2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -53,7 +53,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button2" />
+        app:layout_constraintTop_toBottomOf="@+id/buttonP" />
 
     <EditText
         android:id="@+id/editTextAge"
